# python-skeleton

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yaml
src/sample/: main.py
tests/sample/: main_test.py
