[project]
name = "python-skeleton"
version = "0.1.0"
description = "Add your description here"
authors = [
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
]
virtual = false # this project is not installable

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample"]

[tool.pytest.ini_options]
pythonpath = "src"
